--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 
 [dependencies]
 ahash = "0.8.3"
-#bevy = "0.11"
-bevy = { git = "https://github.com/idedary/bevy" }
+#bevy = { git = "https://github.com/idedary/bevy" }
+bevy = { git = "https://github.com/idedary/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
 colored = "2.0.0"
