--- a/crates/bevy_lunex_utility/Cargo.toml
+++ b/crates/bevy_lunex_utility/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "bevy_lunex"
+name = "bevy_lunex_utility"
 version = "0.1.0"
 edition = "2021"
 
-members = [
-  "crates/*"
-]
-
 [dependencies]
-ahash = "0.8.3"
-mathio = "0.2.0"
+#ahash = "0.8.3"
+#mathio = "0.2.0"
 bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
 colored = "2.0.0"
+
+bevy_lunex_core = { path = "../bevy_lunex_core"}
