--- a/crates/bevy_lunex_ui/Cargo.toml
+++ b/crates/bevy_lunex_ui/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#ahash = "0.8.3"
-#mathio = "0.2.0"
+mathio = "0.2.1"
 bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
 colored = "2.0.0"
 
