--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "bevy_lunex"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
+repository = "https://github.com/bytestring-net/bevy-lunex"
+keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
+categories = ["gui", "mathematics", "game-development"]
+description = "Blazingly fast path based modular layout system built on top of Bevy ECS."
+readme = "README.md"
 
 members = [
   "crates/*"
