--- a/crates/bevy_lunex_ui/Cargo.toml
+++ b/crates/bevy_lunex_ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_lunex_ui"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
@@ -9,5 +9,5 @@ colored = "2.0.0"
 
 bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
 
-bevy_lunex_core = { path = "../bevy_lunex_core"}
-bevy_lunex_utility = { path = "../bevy_lunex_utility"}
+bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.1"}
+bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.1"}
