--- a/crates/bevy_lunex_core/Cargo.toml
+++ b/crates/bevy_lunex_core/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 ahash = "0.8.3"
 colored = "2.0.0"
 
-bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
+#bevy = { git = "https://github.com/bevyengine/bevy", version = "0.12.0-dev", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
+bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
