--- a/crates/bevy_lunex_utility/Cargo.toml
+++ b/crates/bevy_lunex_utility/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 colored = "2.0.0"
 
-bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
+#bevy = { git = "https://github.com/bevyengine/bevy", version = "0.12.0-dev", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
+bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
 
 bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.1"}
