--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ members = [
 ]
 
 [dependencies]
-bevy_lunex_core = { path = "crates/bevy_lunex_core"}
-bevy_lunex_ui = { path = "crates/bevy_lunex_ui"}
-bevy_lunex_utility = { path = "crates/bevy_lunex_utility"}
+bevy_lunex_core = { path = "crates/bevy_lunex_core", version = "0.0.1"}
+bevy_lunex_ui = { path = "crates/bevy_lunex_ui", version = "0.0.1"}
+bevy_lunex_utility = { path = "crates/bevy_lunex_utility", version = "0.0.1"}
