Added examples + improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "./crates/bevy_lunex_ui/Cargo.toml",
         "./crates/bevy_lunex_utility/Cargo.toml",
 
+        "./examples/ui/images/Cargo.toml",
+        "./examples/ui/layouting/Cargo.toml",
         "./examples/ui/office_suite/Cargo.toml"
     ]
 }
