--- a/examples/ui/nesting/Cargo.toml
+++ b/examples/ui/nesting/Cargo.toml
@@ -9,3 +9,6 @@ bevy_lunex = { path = "../../../../bevy-lunex"}
 
 bevy = { version = "0.11.2", features = ["dynamic_linking"] }
 bevy_vector_shapes = "0.5.1"
+
+
+paste = "1.0"
