--- a/crates/bevy_lunex_ui/Cargo.toml
+++ b/crates/bevy_lunex_ui/Cargo.toml
@@ -14,7 +14,8 @@ readme = "README.md"
 mathio = "0.2.1"
 colored = "2.0.0"
 
-bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text"] }
+bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
 
 bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.6"}
 bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.6"}
+pathio = "0.1.6"
