--- a/crates/bevy_lunex_ui/Cargo.toml
+++ b/crates/bevy_lunex_ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_lunex_ui"
-version = "0.0.6"
+version = "0.0.7"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
@@ -14,8 +14,8 @@ readme = "README.md"
 mathio = "0.2.1"
 colored = "2.0.0"
 
-bevy = { version = "0.11.2", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
+bevy = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
 
-bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.6"}
-bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.6"}
-pathio = "0.1.6"
+bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.7"}
+bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.7"}
+pathio = { version = "0.2.0", features = ["bevy"] }
