--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,48 @@
-[package]
-name = "bevy_lunex"
-version = "0.0.8"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-authors = ["Dominik Kaspar"]
-repository = "https://github.com/bytestring-net/bevy-lunex"
-keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
-categories = ["gui", "mathematics", "game-development"]
-description = "Blazingly fast path based modular layout system built on top of Bevy ECS"
-readme = "README.md"
+[workspace.package]
+authors     = ["Dominik Kaspar"]
+version     = "0.0.8"
+edition     = "2021"
+license     = "MIT OR Apache-2.0"
+repository  = "https://github.com/bytestring-net/bevy-lunex"
+keywords    = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
+categories  = ["gui", "mathematics", "game-development"]
+description = "Supporting crate for bevy_lunex"
+readme      = "README.md"
 
+[package]
+name                  = "bevy_lunex"
+description           = "Blazingly fast path based modular layout system built on top of Bevy ECS"
+authors.workspace     = true
+version.workspace     = true
+edition.workspace     = true
+license.workspace     = true
+repository.workspace  = true
+keywords.workspace    = true
+categories.workspace  = true
+readme.workspace      = true
+
+[workspace]
 exclude = [
   "promo/*",
 ]
 
 members = [
   "crates/*",
+  "examples/ui/*"
 ]
 
+[workspace.dependencies]
+ahash                = "^0.8.3"
+bevy                 = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
+colored              = "^2.0.4"
+mathio               = "0.2.1"
+pathio               = { version = "0.2.3", features = ["bevy"] }
+
+bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.8"}
+bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.8"}
+bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.8"}
+
 [dependencies]
-bevy_lunex_core = { path = "crates/bevy_lunex_core", version = "0.0.8"}
-bevy_lunex_ui = { path = "crates/bevy_lunex_ui", version = "0.0.8"}
-bevy_lunex_utility = { path = "crates/bevy_lunex_utility", version = "0.0.8"}
+bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.8"}
+bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.8"}
+bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.8"}
