--- a/crates/bevy_lunex_ui/Cargo.toml
+++ b/crates/bevy_lunex_ui/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "bevy_lunex_ui"
-version = "0.0.8"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-authors = ["Dominik Kaspar <dominik0kaspar@gmail.com>"]
-repository = "https://github.com/bytestring-net/bevy-lunex"
-keywords = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
-categories = ["gui", "mathematics", "game-development"]
-description = "Supporting crate for bevy_lunex"
-readme = "README.md"
+authors.workspace = true
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+description.workspace = true
+readme.workspace = true
 
 [dependencies]
-bevy = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
-bevy_lunex_core = { path = "../bevy_lunex_core", version = "0.0.8"}
-bevy_lunex_utility = { path = "../bevy_lunex_utility", version = "0.0.8"}
-pathio = { version = "0.2.2", features = ["bevy"] }
-mathio = "0.2.1"
-colored = "2.0.0"
+bevy = { workspace = true }
+bevy_lunex_core = { workspace = true }
+bevy_lunex_utility = { workspace = true }
+pathio = { workspace = true }
+mathio = { workspace = true }
+colored = { workspace = true }
