--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,6 @@ bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.8"}
 bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.8"}
 bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.8"}
 bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.8"}
+
+[dev-dependencies]
+bevy               = { version = "0.12.0", default-features = true, features = [ "dynamic_linking" ] }
