Added background example and fixed rust analyzer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,4 @@
 {
-    "rust-analyzer.linkedProjects": [
-        "./crates/bevy_lunex_core/Cargo.toml",
-        "./crates/bevy_lunex_ui/Cargo.toml",
-        "./crates/bevy_lunex_ui_prefab/Cargo.toml",
-        "./crates/bevy_lunex_utility/Cargo.toml",
-
-        "./crates/bevy_lunex_macros/Cargo.toml",
-        
-        "./examples/ui/grids/Cargo.toml",
-        "./examples/ui/images/Cargo.toml",
-        "./examples/ui/office_suite/Cargo.toml",
-
-        "./examples/future_WIP/layouting/Cargo.toml",
-        "./examples/future_WIP/nesting/Cargo.toml",
-    ],
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.linkedProjects": [],
+    "rust-analyzer.showUnlinkedFileNotification": true
 }
