--- a/examples/ui/images/Cargo.toml
+++ b/examples/ui/images/Cargo.toml
@@ -6,6 +6,5 @@ publish = false
 
 [dependencies]
 bevy_lunex = { path = "../../../../bevy-lunex"}
-
-bevy = { version = "0.12.0", features = ["dynamic_linking"] }
-bevy_vector_shapes = "0.6.0"
+bevy = { workspace = true, default-features = true }
+bevy_vector_shapes = { workspace = true }
