--- a/examples/ui/background/Cargo.toml
+++ b/examples/ui/background/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lunex_grids_example"
+name = "lunex_background_example"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,4 +7,3 @@ publish = false
 [dependencies]
 bevy_lunex = { path = "../../../../bevy-lunex"}
 bevy = { workspace = true, default-features = true }
-bevy_vector_shapes = { workspace = true }
