--- a/examples/ui/office_suite/Cargo.toml
+++ b/examples/ui/office_suite/Cargo.toml
@@ -6,7 +6,5 @@ publish = false
 
 [dependencies]
 bevy_lunex = { path = "../../../../bevy-lunex"}
-#bevy_lunex_ui_prefab = { path = "../../../../bevy-lunex/crates/bevy_lunex_ui_prefab"}
-
-bevy = { version = "0.12.0", features = ["dynamic_linking"] }
-bevy_vector_shapes = "0.6.0"
+bevy = { workspace = true, default-features = true }
+bevy_vector_shapes = { workspace = true }
