--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace.package]
   authors     = ["Dominik Kaspar"]
-  version     = "0.0.9"
+  version     = "0.0.10"
   edition     = "2021"
   license     = "MIT OR Apache-2.0"
   repository  = "https://github.com/bytestring-net/bevy-lunex"
@@ -41,12 +41,12 @@
   bevy                 = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
   bevy_vector_shapes   = "0.6.0"
   colored              = "^2.0.4"
-  mathio               = "0.2.1"
+  mathio               = { version = "0.2.3", features = ["bevy"] }
   pathio               = { version = "0.2.3", features = ["bevy"] }
 
-  bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.9"}
-  bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.9"}
-  bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.9"}
+  bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.10"}
+  bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.10"}
+  bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.10"}
 
 [dependencies]
   bevy_lunex_core      = { workspace = true }
