--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,15 @@
+# WORKSPACE ---
+
+[workspace]
+  exclude = [
+    "promo/*",
+  ]
+
+  members = [
+    "crates/*",
+    "examples/ui/*",
+  ]
+
 [workspace.package]
   authors     = ["Dominik Kaspar"]
   version     = "0.0.10"
@@ -8,6 +20,21 @@
   categories  = ["gui", "mathematics", "game-development"]
   description = "Supporting crate for bevy_lunex"
   readme      = "README.md"
+
+[workspace.dependencies]
+  ahash                = "^0.8.3"
+  bevy                 = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
+  bevy_vector_shapes   = "0.6.0"
+  colored              = "^2.0.4"
+  mathio               = { version = "0.2.3", features = ["bevy"] }
+  pathio               = { version = "0.2.3", features = ["bevy"] }
+
+  bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.10"}
+  bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.10"}
+  bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.10"}
+
+
+# BEVY LUNEX ---
 
 [package]
   name                  = "bevy_lunex"
@@ -25,28 +52,6 @@
     ".gitignore",
     ".vscode",
   ]
-
-[workspace]
-  exclude = [
-    "promo/*",
-  ]
-
-  members = [
-    "crates/*",
-    "examples/ui/*",
-  ]
-
-[workspace.dependencies]
-  ahash                = "^0.8.3"
-  bevy                 = { version = "0.12.0", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_text", "bevy_gizmos"] }
-  bevy_vector_shapes   = "0.6.0"
-  colored              = "^2.0.4"
-  mathio               = { version = "0.2.3", features = ["bevy"] }
-  pathio               = { version = "0.2.3", features = ["bevy"] }
-
-  bevy_lunex_core      = { path = "crates/bevy_lunex_core", version = "0.0.10"}
-  bevy_lunex_ui        = { path = "crates/bevy_lunex_ui", version = "0.0.10"}
-  bevy_lunex_utility   = { path = "crates/bevy_lunex_utility", version = "0.0.10"}
 
 [dependencies]
   bevy_lunex_core      = { workspace = true }
