--- a/examples/background/Cargo.toml
+++ b/examples/background/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 publish = false
 
 [dependencies]
-bevy_lunex = { path = "../../../../bevy-lunex"}
+bevy_lunex = { path = "../../../bevy-lunex"}
 bevy = { workspace = true, default-features = true, features = ["dynamic_linking"] }
