--- a/examples/bevycom/Cargo.toml
+++ b/examples/bevycom/Cargo.toml
@@ -29,4 +29,4 @@
     "dynamic_linking",
   ] }
   bevy_lunex         = { workspace = true }
-  bevy_mod_billboard = { workspace = true }
+  #bevy_mod_billboard = { workspace = true }
