--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,6 @@
   #bevy_mod_billboard = { version = "0.5.1" }
 
   bevy_lunex = { path = "crates/bevy_lunex" }
-  #lunex_engine = { git = "https://github.com/bytestring-net/lunex_engine" }
-
-  lunex_engine = { path = "/home/dominik/Projects/Bytestring/lunex_engine/crates/lunex_engine" }
+  
+  lunex_engine = { git = "https://github.com/bytestring-net/lunex_engine" }
+  #lunex_engine = { path = "/home/dominik/Projects/Bytestring/lunex_engine/crates/lunex_engine" }
