--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@
 
 [workspace.dependencies]
 
-  #bevy = { version = "0.12.1", default_features = false, features = [
-  bevy = { git = "https://github.com/bevyengine/bevy", default_features = false, features = [
+  bevy = { version = "0.13.0", default_features = false, features = [
+  #bevy = { git = "https://github.com/bevyengine/bevy", default_features = false, features = [
     #"bevy_asset",
     #"bevy_gilrs",
     #"bevy_winit",
