--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@
 [workspace.dependencies]
 
   bevy = { version = "0.13.0", default_features = false, features = [
-  #bevy = { git = "https://github.com/bevyengine/bevy", default_features = false, features = [
+  #bevy = { git = "https://github.com/floppyhammer/bevy", branch="fix-camera-distance", default_features = false, features = [
     #"bevy_asset",
     #"bevy_gilrs",
     #"bevy_winit",
