added better debug

--- a/crates/bevy_lunex/Cargo.toml
+++ b/crates/bevy_lunex/Cargo.toml
@@ -10,4 +10,8 @@
 
 [dependencies]
   bevy         = { workspace = true }
+  colored      = { workspace = true }
   lunex_engine = { workspace = true, features = ["bevy"] }
+
+[features]
+  debug = []
