--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@
 
 [workspace.package]
   authors     = ["Dominik Kaspar"]
-  version     = "0.0.1"
+  version     = "0.1.0-alpha"
   edition     = "2021"
   license     = "MIT OR Apache-2.0"
   repository  = "https://github.com/bytestring-net/bevy-lunex"
@@ -29,24 +29,11 @@
   bevy = { version = "0.13.2", default_features = false, features = [
     #"bevy_asset",
     #"bevy_gilrs",
-    #"bevy_winit",
-    #"bevy_core_pipeline",
     "bevy_pbr",
-    #"bevy_render",
     "bevy_sprite",
     "bevy_text",
     "multi-threaded",
-    #"png",
-    #"hdr",
-    #"x11",
     "bevy_gizmos",
-    #"default_font",
   ] }
 
-  bevy_mod_picking = { version = "0.18.2", default_features = false, features = [
-    #"backend_raycast",
-    #"backend_sprite",
-    #"debug",
-    #"selection",
-    #"highlight",
-  ] }
+  bevy_mod_picking = { version = "0.18.2", default_features = false, features = [] }
