--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@
 
 [workspace.dependencies]
 
-  bevy_lunex   = { path = "crates/bevy_lunex" }
-  lunex_engine = { path = "crates/lunex_engine" }
+  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.1.0-alpha" }
+  lunex_engine = { path = "crates/lunex_engine", version = "0.1.0-alpha" }
 
   colored            = { version = "^2.1" }
   indexmap           = { version = "^2.1" }
