--- a/examples/usage_2d/Cargo.toml
+++ b/examples/usage_2d/Cargo.toml
@@ -7,6 +7,7 @@
   repository.workspace = true
   keywords.workspace   = true
   categories.workspace = true
+  publish = false
 
 [dependencies]
   bevy = { version = "0.13.1", default_features = false, features = [
