--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "cargo",
 			"command": "run",
-			"args": ["--bin", "usage_2d"],
+			"args": ["--bin", "minimal"],
 			"problemMatcher": [
 				"$rustc"
 			],
@@ -14,7 +14,7 @@
 		{
 			"type": "cargo",
 			"command": "run",
-			"args": ["--bin", "usage_2d"],
+			"args": ["--bin", "minimal"],
 			"problemMatcher": [
 				"$rustc"
 			],
@@ -24,7 +24,7 @@
 		{
 			"type": "cargo",
 			"command": "run",
-			"args": ["--bin", "usage_2d"],
+			"args": ["--bin", "minimal"],
 			"problemMatcher": [
 				"$rustc"
 			],
