--- a/examples/minimal/Cargo.toml
+++ b/examples/minimal/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-  name = "usage_2d"
+  name = "minimal"
   authors.workspace    = true
   version.workspace    = true
   edition.workspace    = true
-  license.workspace    = true
-  repository.workspace = true
-  keywords.workspace   = true
-  categories.workspace = true
   publish = false
 
 [dependencies]
