Removed unnecessary window_centered_at

--- a/crates/bevy_lunex/Cargo.toml
+++ b/crates/bevy_lunex/Cargo.toml
@@ -16,5 +16,9 @@
   bevy_mod_picking = { workspace = true, optional = true }
 
 [features]
+  # Default features
+  default = ["picking"]
+
+  # Features
   debug = []
   picking = ["bevy_mod_picking"]
