--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@
 
 [workspace.package]
   authors     = ["IDEDARY"]
-  version     = "0.1.0-alpha.2"
+  version     = "0.1.0"
   edition     = "2021"
   license     = "MIT OR Apache-2.0"
   repository  = "https://github.com/bytestring-net/bevy-lunex"
@@ -26,8 +26,8 @@
 
 [workspace.dependencies]
 
-  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.1.0-alpha.2" }
-  lunex_engine = { path = "crates/lunex_engine", version = "0.1.0-alpha.2" }
+  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.1.0" }
+  lunex_engine = { path = "crates/lunex_engine", version = "0.1.0" }
 
   colored            = { version = "^2.1" }
   indexmap           = { version = "^2.1" }
