--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,13 +33,13 @@
   indexmap           = { version = "^2.1" }
   thiserror          = { version = "^1.0" }
 
-  bevy = { version = "0.13.2", default_features = false, features = [
+  bevy = { version = "0.14.0-rc.3", default_features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
     "bevy_audio",
     "bevy_text",
-    "multi-threaded",
+    "multi_threaded",
     "bevy_gizmos",
   ] }
 
-  bevy_mod_picking = { version = "0.19.0", default_features = false, features = [] }
+  bevy_mod_picking = { version = "0.20.0-rc.0", default_features = false, features = [] }
