--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@
 
 [workspace.package]
   authors     = ["IDEDARY"]
-  version     = "0.1.1-rc.0"
+  version     = "0.1.1"
   edition     = "2021"
   license     = "MIT OR Apache-2.0"
   repository  = "https://github.com/bytestring-net/bevy-lunex"
@@ -26,14 +26,14 @@
 
 [workspace.dependencies]
 
-  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.1.1-rc.0" }
-  lunex_engine = { path = "crates/lunex_engine", version = "0.1.1-rc.0" }
+  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.1.1" }
+  lunex_engine = { path = "crates/lunex_engine", version = "0.1.1" }
 
   colored            = { version = "^2.1" }
   indexmap           = { version = "^2.1" }
   thiserror          = { version = "^1.0" }
 
-  bevy = { version = "0.14.0-rc.2", default_features = false, features = [
+  bevy = { version = "0.14.0-rc.3", default_features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
     "bevy_audio",
