--- a/examples/minimal/Cargo.toml
+++ b/examples/minimal/Cargo.toml
@@ -6,7 +6,7 @@
   publish = false
 
 [dependencies]
-  bevy = { version = "0.14.0-rc.2", default_features = false, features = [
+  bevy = { version = "^0.14.0", default_features = false, features = [
     "bevy_asset",
     "bevy_gilrs",
     "bevy_winit",
@@ -17,12 +17,6 @@
     "bevy_text",
     "multi_threaded",
     "png",
-    "hdr",
     "x11",
-    "bevy_gizmos",
-    "tonemapping_luts",
-    "default_font",
-
-    "dynamic_linking",
   ] }
   bevy_lunex   = { workspace = true, features=["debug"] }
