--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,38 +1,40 @@
+#======================#
+#=== WORKSPACE INFO ===#
+
 [workspace]
   resolver = "2"
-  members = [
-    "crates/*",
-    "examples/*",
-  ]
-  exclude = [
-    "promo/*",
-    "examples/*",
-    "docs/*",
-    ".gitignore",
-    ".vscode",
-  ]
+  members  = ["crates/*", "examples/*"]
+  exclude  = [".vscode", "docs/*", "examples/*", "promo/*", ".gitignore"]
+
+[workspace.package]
+  authors    = ["IDEDARY"]
+  version    = "0.2.4"
+  edition    = "2021"
+  license    = "MIT OR Apache-2.0"
+  repository = "https://github.com/bytestring-net/bevy-lunex"
+  keywords   = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
+  categories = ["gui", "mathematics", "game-development"]
+
+#========================#
+#=== PACKAGE SETTINGS ===#
 
 [profile.dev]
   opt-level = 1
 
-[workspace.package]
-  authors     = ["IDEDARY"]
-  version     = "0.2.3"
-  edition     = "2021"
-  license     = "MIT OR Apache-2.0"
-  repository  = "https://github.com/bytestring-net/bevy-lunex"
-  keywords    = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
-  categories  = ["gui", "mathematics", "game-development"]
+#===============================#
+#=== DEPENDENCIES & FEATURES ===#
 
 [workspace.dependencies]
+  # LOCAL CRATES
+  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.2.4" }
+  lunex_engine = { path = "crates/lunex_engine", version = "0.2.4" }
 
-  bevy_lunex   = { path = "crates/bevy_lunex", version = "0.2.3" }
-  lunex_engine = { path = "crates/lunex_engine", version = "0.2.3" }
+  # STANDART DEPENDENCIES
+  colored   = { version = "^2.1" }
+  indexmap  = { version = "^2.1" }
+  thiserror = { version = "^1.0" }
 
-  colored            = { version = "^2.1" }
-  indexmap           = { version = "^2.1" }
-  thiserror          = { version = "^1.0" }
-
+  # GAME ENGINE
   bevy = { version = "^0.14", default-features = false, features = [
     "bevy_pbr",
     "bevy_sprite",
@@ -41,5 +43,6 @@
     "bevy_gizmos",
   ] }
 
-  bevy_kira_audio = { version = "^0.20" }
+  # 3RD-PARTY GAME ENGINE CRATES
+  bevy_kira_audio  = { version = "^0.20" }
   bevy_mod_picking = { version = "^0.20", default-features = false, features = ["selection", "backend_raycast"] }
