--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,12 @@
 [target.x86_64-unknown-linux-gnu]
-linker = "clang"
-rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
+  linker = "clang"
+  rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]
 
-[build]
-rustflags = ["-Z", "threads=8"]
+[unstable]
+  codegen-backend = true
+
+[profile.dev]
+  codegen-backend = "cranelift"
+
+[profile.dev.package."*"]
+  codegen-backend = "llvm"
