Add lunex picking support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@
   #===========================#
   #=== RUST MISCELLANEOUS === #
   
+  radsort   = { version = "^0.1.1" }
   colored   = { version = "^3.0.0" }
   indexmap  = { version = "^2.7.1" }
   thiserror = { version = "^2.0.11" }
