--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,9 @@
     "bevy_window",
     "bevy_winit",
     "custom_cursor",
+
+    # Required for doctests
+    "x11",
   ] }
 
   #===============================#
