--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,14 @@ jobs:
           mkdir mdbook
           curl -sSL $url | tar -xz --directory=./mdbook
           echo `pwd`/mdbook >> $GITHUB_PATH
+      - name: Install mdbook-alerts plugin
+        run: |
+          tag=$(curl 'https://github.com/lambdalisue/rs-mdbook-alerts/releases/latest' | jq -r '.tag_name')
+          url="https://github.com/lambdalisue/rs-mdbook-alerts/releases/download/${tag}/mdbook-alerts-x86_64-unknown-linux-gnu"
+          mkdir -p mdbook-alerts
+          curl -sSL $url -o mdbook-alerts/mdbook-alerts
+          chmod +x mdbook-alerts/mdbook-alerts
+          echo `pwd`/mdbook-alerts >> $GITHUB_PATH
       - name: Build Book
         run: |
           cd docs
