--- a/examples/sprite3d/Cargo.toml
+++ b/examples/sprite3d/Cargo.toml
@@ -2,7 +2,7 @@
 #=== EXAMPLE INFO ===#
 
 [package]
-  name = "mesh2d"
+  name = "sprite3d"
   authors.workspace = true
   version.workspace = true
   edition.workspace = true
