--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,8 @@ jobs:
           echo `pwd`/mdbook >> $GITHUB_PATH
       - name: Install mdbook-alerts plugin
         run: |
-          tag=$(curl 'https://github.com/lambdalisue/rs-mdbook-alerts/releases/latest' | jq -r '.tag_name')
-          url="https://github.com/lambdalisue/rs-mdbook-alerts/releases/download/${tag}/mdbook-alerts-x86_64-unknown-linux-gnu"
           mkdir -p mdbook-alerts
-          curl -sSL $url -o mdbook-alerts/mdbook-alerts
+          curl -sSL https://github.com/lambdalisue/rs-mdbook-alerts/releases/download/v0.7.0/mdbook-alerts-x86_64-unknown-linux-gnu -o mdbook-alerts/mdbook-alerts
           chmod +x mdbook-alerts/mdbook-alerts
           echo `pwd`/mdbook-alerts >> $GITHUB_PATH
       - name: Build Book
