Fixed gamepad cursor and started working on text3d

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,7 @@
 		{
 			"type": "cargo",
 			"command": "run",
-			"args": ["--bin", "mesh2d"],
+			"args": ["--bin", "text3d"],
 			"problemMatcher": [
 				"$rustc"
 			],
